# wacommplusplus

./: .gitignore  Array.h  CMakeLists.txt  CommandLine.hpp  Config.cpp  Config.hpp  JulianDate.cpp  JulianDate.hpp  LICENSE  OceanModelAdapter.cpp  OceanModelAdapter.hpp  Particle.cpp  Particle.hpp  Particles.cpp  Particles.hpp  README.md  ROMS2Wacomm.cpp  ROMS2Wacomm.hpp  ROMSAdapter.cpp  ROMSAdapter.hpp  Source.cpp  Source.hpp  Sources.cpp  Sources.hpp  Utils.cpp  Utils.hpp  Wacomm.cpp  Wacomm.hpp  WacommPlusPlus.cpp  WacommPlusPlus.hpp  main.cpp
OceanModelAdapters/: ROMSAdapter.cpp  ROMSAdapter.hpp  WacommAdapter.cpp  WacommAdapter.hpp
cuda/: kernel.cu  kernel.h
data/: readme.txt
data/input/: readme.txt
data/output/: readme.txt
examples/: ADMIRE-WP7-webinar-demo-UNITO.md  ADMIRE-WP7-webinar-demo.md  new-sources-campania_region.json  oilspill-demo-01.json  oilspill-demo-02.json  slurm_UNITO.sh  slurm_webinarGPU.sh  sources-campania_region.json  sources-sar.json  sources-sarno_river.json  sources-webinar.json  wacomm-config.json  wacomm-native-sar.json  wacomm-native-usecase.json  wacomm-roms-sar-download.json  wacomm-roms-usecase-download.json  wacomm-sarno-lite.json  wacommplusplus-mpi-omp-cuda-slurm.sh  wacommplusplus-mpi-omp-slurm.sh  webinar-demo.md  webinar-native-usecase.json  webinar-roms-usecase-download.json
utilities/createRestartFileFromJson/: README.md  features.geojson  main.py
